# caio.faulty-buildconf

./: config.yml  init.rb  manifest
caio.common-osdeps/: common.osdeps  source.yml
caio.define-catkin/: catkin.osdep  init.rb  ros.osdeps  ros.osrepos  source.yml
caio.define-catkin/autobuild/: catkin.rb  dsl.rb
caio.local-package_set/: local.autobuild  source.yml
caio.local-package_set/src/package_that_fails/: CMakeLists.txt  package.xml
caio.local-package_set/src/package_that_succeeds/: CMakeLists.txt  manifest.xml
caio.local-package_set/src/package_that_succeeds/src/: greeting.cpp
